gui/partial/checklist/checklist.less
/* ... */
.chat {
  h4 a {
  	font-size:13px;
    &.active {
      color: gray;
      border-bottom:2px solid @peter-river;

    }

    &.inactive {
      color: #ccc;
    }
  }

}

.status-label {
  font-size: 12px;
  font-weight: bold;
  padding: 8px 11px;
}

.comment-faded { opacity: 0.6; }

.mobile {
	display: none;
}

.btn-square {
	border-radius: 0;
}

@media only screen and (max-width : 1200px) {
	.full {
		heigth: auto;
		min-heigth: 100%;
	}
	.container-fluid {
		padding: 0 15px;
	}
	.mobile {
		display: block;
		.btn-transparent {
			color: #414141;
		}
		.btn-light {
			background-color: #e1e4e5;
			color: #414141;
		}
		.btn-white {
			background-color: #FFF;
			color: #414141;
		}
		.btn-square {
			border-radius: 0;
		}
	}
	.checklist-wrapper .checklist-col {

		margin-bottom: 2em;

		.item-title {
			padding-left: 34px !important;
		}

		.fui-list-columned {
			width: 30px !important;
		}

		.categories-list {
			padding-bottom: 3em;
		}
	}
	.checklist-wrapper div.full {
		overflow-y: visible;
		/*
		height: auto !important;
		float: none;
		display: block;
		position: static;
		min-height: 100% !important;
		*/
	}
	.checklist-wrapper {
		height: auto;
		// Mobile view
		#checklist-items {
			height: auto;
		}


		#checklist-items,
		#checklist-detail-container,
		#checklist-activity {
			width: 100%;
			opacity: 1;

			-webkit-transition: opacity 0.3s ease-in-out;
		    -moz-transition: opacity 0.3s ease-in-out;
		    -o-transition: opacity 0.3s ease-in-out;
		    transition: opacity 0.3s ease-in-out;
		}

		#checklist-items.zero,
		#checklist-detail-container.zero,
		#checklist-detail.zero,
		#checklist-activity.zero {
			width: 0;
			padding: 0;
			margin: 0;
			height: 0;
			overflow: hidden;
			opacity: 0;


		}

		.chat.full {
			position: static;
			height: 100%;
		}

	}
}

.status {
	padding-top:3px;
	margin-right:-2px;
	padding-bottom:0px;
	text-align:right;
	.fui-check-inverted  {
		padding-top:2px;
	}
	a {
		text-decoration:underline;
	}
	button {
		padding:5px 5px;
		font-size:11px;
		margin-right:02px;
		&[class*="doc-status"] {
			background-color:transparent;
			border:1px solid white;
		}
		&.doc-status-0 { border-color:@doc-status-0;color:@doc-status-0; }
		&.doc-status-1 { border-color:@doc-status-1;color:@doc-status-1; }
		&.doc-status-2 { border-color:@doc-status-2;color:@doc-status-2; }
		&.doc-status-3 { border-color:@doc-status-3;color:@doc-status-3; }
		&.doc-status-4 { border-color:@doc-status-4;color:@doc-status-4; }
		&.doc-status-5 { border-color:@doc-status-5;color:@doc-status-5; }
		&.doc-status-6 { border-color:@doc-status-6;color:@doc-status-6; }
		&.doc-status-7 { border-color:@doc-status-7;color:@doc-status-7; }
		&.doc-status-8 { border-color:@doc-status-8;color:@doc-status-8; }
		&.doc-status-9 { border-color:@doc-status-9;color:@doc-status-9;}
		&.doc-status-closed { border-color:lighten(@emerland, 15%);color:lighten(@emerland, 15%);}
	}

}

ul.status-list a {
	padding: 6px 8px 6px;
	span.icon {margin-top:0;}
}

.custom-btn-round button {
	border-bottom-left-radius: 6px !important;
	border-top-left-radius: 6px !important;
}

iframe.fit-container, object, embed {
	width:100%;
	height:100%;
	border:0;
	padding:0;
	margin:0;
	.transition( all 1s linear );
}

iframe.loading {
	opacity: 0.05;
	.transition( all 1s linear );
}

div.iframe-loader::after {
	content: "\f110";
	font-family: FontAwesome;
	font-style: normal;
	font-weight: normal;
	text-decoration: inherit;
	position: absolute;
	font-size: 40px;
	color: rgba(0,0,0,0.25);
	top: 50%;
	left: 50%;
	margin: -20px 0 0 -20px;
	-webkit-animation: spin 2s infinite linear;
	-moz-animation: spin 2s infinite linear;
	-o-animation: spin 2s infinite linear;
	animation: spin 2s infinite linear;
}

